--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Step 4 - Delete previous workflow runs
         uses: Mattraks/delete-workflow-runs@v2.05
         with:
-          token: ${{ AGH.token }}
+          token: ${{ secrets.AGH_TOKEN }}
           repository: ${{ github.repository }}
           retain_days: 1
           keep_minimum_runs: 3
