--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: Build & Release AdguardHome
 
 on:
+  push:
+    branches: [ main ]
   schedule:
-    - cron: "20 01 * * *"
+    - cron: "00 00 * * *"
   watch:
     types: [started]
 
@@ -12,9 +14,11 @@ jobs:
     steps:
       - name: Step 1 - Checkout
         uses: actions/checkout@v3.1.0
+
       - name: Step 2 - Build GFWList2AGH
         run: |
-          curl -s "https://raw.githubusercontent.com/Atroc-X/GFWList-AGH/source/release.sh" | sudo bash
+          curl -s "https://raw.githubusercontent.com/siseboy/AdguardHome/source/release.sh" | sudo bash
+
       - name: Step 3 - Release GFWList2AGH
         run: |
           sudo git config user.name github-actions
